@@ -11,8 +11,12 @@ python-apt (0.6.16.2) unstable; urgency=low
     - return useful values on Cache.update()
   * apt/cache.py, apt/package.py: fix various pychecker warnings
   * apt/cache.py: Release locks on failure (thanks to Colin Watson)
-
- -- 
+  * python/srcrecords.cc:
+    - add "Restart" method
+    - don't run auto "Restart" before performing a Lookup 
+    - fix the initalization (no need to pass a PkgCacheType to the records)
+  
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 22 Mar 2006 11:19:34 +0100
 
 python-apt (0.6.16.1) unstable; urgency=low
 
